--- a/src/index.html
+++ b/src/index.html
@@ -13,25 +13,97 @@
   <title>Generador De Cartas</title>
 </head>
 
-<body>
-  <div class="d-flex align-items-center justify-content-center">
-    <div class="card" style="width: 14rem; height: 20rem;">
-    <div class="card-body d-flex">
+<body class="min-vh-100 d-flex flex-column justify-content-center align-items-center">
+
+  <div class="jumbotron-007 text-light p-5 mb-5 fade-in-007">
+    <div class="container text-center py-5">
+      <h1 class="display-3 fw-bold jbond-text neon-007">
+        007 • 4Geeks Royale
+      </h1>
+      <p class="fs-4 mt-3 mb-4 text-white-50">
+        Cada carta es una misión. Cada apuesta es un riesgo.
+      </p>
+    </div>
+  </div>
+  <div id="cartas-arriba" class="d-flex gap-3 mb-4">
+    <div class="carta-back body-carta card justify-content-center" style="width: 14rem; height: 20rem;"></div>
+    <div class="carta-back body-carta card justify-content-center" style="width: 14rem; height: 20rem;"></div>
+    <div class="carta-back body-carta card justify-content-center" style="width: 14rem; height: 20rem;"></div>
+    <div class="carta-back body-carta card justify-content-center" style="width: 14rem; height: 20rem;"></div>
+    <div class="carta-back body-carta card justify-content-center" style="width: 14rem; height: 20rem;"></div>
+  </div>
+
+  <button id="btn-refresh" class="btn btn-light mb-4">
+    Repartir
+  </button>
+  <button id="btn-timer" class="btn btn-warning mb-4 ms-3">
+    Auto-generar en 5s
+  </button>
+
+  <div id="cartas-container" class="d-flex gap-3">
+    <div class="body-carta card d-flex text-center justify-content-center" style="width: 14rem; height: 20rem;">
       <div class="d-flex justify-content-start align-items-start">
-        <p>Ícono Superior Izquierdo</p>
+        <p class="item-top">♣</p>
       </div>
       <div class="d-flex justify-content-center align-items-center">
-        <p>Número Central</p>
+        <p class="item-center">A</p>
       </div>
       <div class="d-flex justify-content-end align-items-end">
-         <p>Ícono inferior Derecho</p>
+        <p class="item-bottom">♣</p>
+      </div>
+    </div>
+
+    <div class="body-carta card d-flex text-center justify-content-center" style="width: 14rem; height: 20rem;">
+      <div class="d-flex justify-content-start align-items-start">
+        <p class="item-top">♣</p>
+      </div>
+      <div class="d-flex justify-content-center align-items-center">
+        <p class="item-center">A</p>
+      </div>
+      <div class="d-flex justify-content-end align-items-end">
+        <p class="item-bottom">♣</p>
+      </div>
+    </div>
+
+    <div class="body-carta card d-flex text-center justify-content-center" style="width: 14rem; height: 20rem;">
+      <div class="d-flex justify-content-start align-items-start">
+        <p class="item-top">♣</p>
+      </div>
+      <div class="d-flex justify-content-center align-items-center">
+        <p class="item-center">A</p>
+      </div>
+      <div class="d-flex justify-content-end align-items-end">
+        <p class="item-bottom">♣</p>
+      </div>
+    </div>
+
+    <div class="body-carta card d-flex text-center justify-content-center" style="width: 14rem; height: 20rem;">
+      <div class="d-flex justify-content-start align-items-start">
+        <p class="item-top">♣</p>
+      </div>
+      <div class="d-flex justify-content-center align-items-center">
+        <p class="item-center">A</p>
+      </div>
+      <div class="d-flex justify-content-end align-items-end">
+        <p class="item-bottom">♣</p>
+      </div>
+    </div>
+
+    <div class="body-carta card d-flex text-center justify-content-center" style="width: 14rem; height: 20rem;">
+      <div class="d-flex justify-content-start align-items-start">
+        <p class="item-top">♣</p>
+      </div>
+      <div class="d-flex justify-content-center align-items-center">
+        <p class="item-center">A</p>
+      </div>
+      <div class="d-flex justify-content-end align-items-end">
+        <p class="item-bottom">♣</p>
       </div>
     </div>
   </div>
-  </div>
 
-  <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
   <script type="module" src="/app.js"></script>
 </body>
+
 
 </html>
